# mkprof

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hooks.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: authors.yml  design.md  index.md
docs/blog/posts/: getting-started.md
docs/javascripts/: blog_nav.js
docs/stylesheets/: extra.css
src/mkprof/: __init__.py  build.py  cli.py  config.py  init_cmd.py
src/mkprof/notebook/: __init__.py  jupyter.py  lint.py  marimo.py  markdown.py  models.py  template.md.j2
src/mkprof/templates/: authors.yml  extra.css  gitignore  hooks.py  index.md  mkdocs.yml
tests/: conftest.py  test_build.py  test_config.py  test_integration.py  test_jupyter.py  test_obsidian.py  test_rewrite.py
tests/fixtures/: html_img.ipynb  missing_meta.ipynb  simple.ipynb
