[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mkprof"
dynamic = ["version"]
description = "A companion tool for mkdocs-material that converts Jupyter notebooks into blog posts"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Russell Neches", email = "ryneches@gmail.com" }]
keywords = ["mkdocs", "jupyter", "notebook", "blog", "mkdocs-material", "static-site"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "mdformat>=0.7",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pyspellchecker>=0.8",
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hatch>=1.12",
]

[project.scripts]
mkprof = "mkprof.cli:main"

[project.urls]
Homepage = "https://mkprof.vort.org"
Repository = "https://github.com/ryneches/mkprof"
Documentation = "https://mkprof.vort.org"
Changelog = "https://github.com/ryneches/mkprof/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/mkprof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/mkprof"]
omit = ["*/tests/*"]
